--- a/template.css
+++ b/template.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@100&family=Sacramento&display=swap');
 
-/*
-font-family: 'Oswald', sans-serif;
-font-family: 'Roboto', sans-serif;
-font-family: 'Sacramento', cursive;
-*/
-
 .pkojiro {
     width: 75%;
+    margin: 0 auto;
     color: #ffffff;
 }
 
@@ -51,6 +46,7 @@ font-family: 'Sacramento', cursive;
     padding: 0px 15px;
     width: 90%;
     margin: 15px auto;
+    font-size: 1em;
 }
 
 .pkojiro .content p {
@@ -97,6 +93,6 @@ font-family: 'Sacramento', cursive;
 
 .pkojiro .bottom .spoilers {
     width: calc(100% - 180px);
-    margin: 0 auto;
+    margin: auto auto;
     font-family: 'Roboto', sans-serif;
 }
