--- a/template.css
+++ b/template.css
@@ -117,3 +117,8 @@
 .pkojiro .bottom .spoilers dl.codebox.spoiler .spoiler_content.hidden {
     border: 0px solid transparent!important;
 }
+
+.pkojiro .content ul, .pkojiro .content ol {
+    margin-left: 20px!important;
+    margin-bottom: 0px!important;
+}
