--- a/template.css
+++ b/template.css
@@ -118,7 +118,7 @@
     border: 0px solid transparent!important;
 }
 
-.pkojiro .content ul, .pkojiro .content ol {
+.pkojiro .spoilers ul, .pkojiro .spoilers ol {
     margin-left: 20px!important;
     margin-bottom: 0px!important;
 }
