--- a/template.css
+++ b/template.css
@@ -8,7 +8,7 @@
 
 .pkojiro .head {
     height: 150px;
-    background: gray url(https://i.imgur.com/GBRRzGN.gif) no-repeat center bottom;
+    background: #87CEFA url(https://i.imgur.com/GBRRzGN.gif) no-repeat center bottom;
     background-size: cover;
     border-radius: 12px;
     margin-bottom: 21px;
