--- a/template.css
+++ b/template.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@100&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@100;400;700&family=Sacramento&display=swap');
 
 .pkojiro {
     width: 75%;
@@ -57,6 +57,10 @@
 
 .pkojiro .content p {
     text-align: justify;
+    font-family: 'Roboto', Verdana, Helvetica, Arial, sans-serif;
+    font-size: 1.2em;
+    margin-bottom: 1.2em;
+    line-height: 1.6em;
 }
 
 .pkojiro .content .fala {
